examples/spork/failing/conflicting_variable_rename/Expected.java
public class Adder {
<<<<<<< LEFT
    public int add(int lhs, int rhs) {
||||||| BASE
    public int add(int lhs, int b) {
=======
    public int add(int lhs, int r) {
>>>>>>> RIGHT
<<<<<<< LEFT
        return lhs + rhs;
||||||| BASE
        return lhs + b;
=======
        return lhs + r;
>>>>>>> RIGHT
    }
}
